@@ -1773,7 +1773,7 @@ click '''''Restore'''''. To perform a selective restoration, check the boxes cor
 revisions to be restored, and click '''''Restore'''''. Clicking '''''Reset''''' will clear the
 comment field and all checkboxes.",
 'undeletearticle' => 'Restore deleted page',
-'undeleterevisions' => "$1 revisions archived",
+'undeleterevisions' => "$1 {{PLURAL:$1|revision|revisions}} archived",
 'undeletehistory' => 'If you restore the page, all revisions will be restored to the history.
 If a new page with the same name has been created since the deletion, the restored
 revisions will appear in the prior history, and the current revision of the live page
@@ -1795,6 +1795,11 @@ revision may have been restored or removed from the archive.",
 'undeletedpage' => "<big>'''$1 has been restored'''</big>
 
 Consult the [[Special:Log/delete|deletion log]] for a record of recent deletions and restorations.",
+'undelete-header' => 'See [[Special:Log/delete|the deletion log]] for recently deleted pages.',
+'undelete-search-box' => 'Search deleted pages',
+'undelete-search-prefix' => 'Show pages starting with:',
+'undelete-search-submit' => 'Search',
+'undelete-no-results' => 'No matching pages found in the deletion archive.',
 
 # Namespace form on various pages
 'namespace' => 'Namespace:',
